--- a/stylesheet.css
+++ b/stylesheet.css
@@ -124,7 +124,7 @@ p {
     } */
 
     /* Background styles */
-        background-image: url('erika-villeda.github.io/sources/annie-spratt-QckxruozjRg-unsplash.jpg');
+        background-image: url('https://raw.githubusercontent.com/erika-villeda/erika-villeda.github.io/main/sources/annie-spratt-QckxruozjRg-unsplash.jpg');
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
